--- a/tlm-token-farm/package.json
+++ b/tlm-token-farm/package.json
@@ -9,7 +9,7 @@
     "url": "https://github.com/MaibornWolff/tlm-components.git"
   },
   "scripts": {
-    "start": "npm run build-tw && http-server -p 8080",
+    "start": "npm run build && http-server -p 8080",
     "transform:core": "npx token-transformer input/tokens.json input/MW_core.json MW_core,MW_semantic_light,MW_component",
     "transform:semantic": "npx token-transformer input/tokens.json input/MW_semantic_light.json MW_core,MW_semantic_light,MW_component",
     "transform:component": "npx token-transformer input/tokens.json input/MW_component.json MW_core,MW_semantic_light,MW_component",
